# airplane_booking_cli

./: CMakeLists.txt  main.cpp
data/: flights.json
include/: Booking.h  BookingManager.h  BookingSystem.h  Flight.h  FlightList.h  MenuSystem.h  StringUtils.h  UserInput.h
src/: Booking.cpp  BookingManager.cpp  BookingSystem.cpp  Flight.cpp  FlightList.cpp  MenuSystem.cpp  StringUtils.cpp  UserInput.cpp
